# sigscope-board

./: CMakeLists.txt  main.c
adc_dma/: adc_fft copy.c  adc_fft.c  adc_fft.h
adc_dma_bkup/: kiss_fftr.c  kiss_fftr.h
ble/: picow_bt_base.c  picow_bt_base.h  picow_bt_if.c  picow_bt_if.h
sigscope/: msg_format.h  sigscope.c  sigscope.h
